server: convert to use virtual threads